src/objects/ACED_Channel__c.object
<CustomObject>
    <fields>
        <fullName>Act_Channel_Attributes__c</fullName>
        <description>backend field to update channel when channel attributes are deleted</description>
        <label># Act Channel Attributes</label>
        <summaryFilterItems>
            <field>ACED_Channel_Attribute__c.Actual__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ACED_Channel_Attribute__c.Channel__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Attribute_F__c</fullName>
        <formula>if(ISBLANK(Actual_Attribute__c),&apos;No Actual Attribute Entered&apos;,&apos;# &apos;&amp;Actual_Attribute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please enter Actual Attribute in the channel attribute section</inlineHelpText>
        <label>Actual Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Attribute__c</fullName>
        <inlineHelpText>This is a helptext for Actual Attribute</inlineHelpText>
        <label>Actual Attribute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Category__c</fullName>
        <inlineHelpText>This is a helptext for Channel Category</inlineHelpText>
        <label>Channel Category</label>
        <picklist>
            <picklistValues>
                <fullName>eLearning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>This is a helptext for Comments</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Channel_Attributes__c</fullName>
        <label># Pot Channel Attributes</label>
        <summaryFilterItems>
            <field>ACED_Channel_Attribute__c.Potential__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ACED_Channel_Attribute__c.Channel__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Potential_Attribute_F__c</fullName>
        <formula>if(ISBLANK(Potential_Attribute__c),&apos;Potential Not Applicable/Not Entered&apos;,&apos;# &apos;&amp;Potential_Attribute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please enter Potential Attribute in the channel attribute section</inlineHelpText>
        <label>Potential Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Attribute__c</fullName>
        <inlineHelpText>This is a helptext for Potential Attribute</inlineHelpText>
        <label>Potential Attribute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>This is a helptext for Weight</inlineHelpText>
        <label>Weight</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for eAsset</inlineHelpText>
        <label>eAsset</label>
        <type>Checkbox</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Category__c</columns>
        <columns>eAsset__c</columns>
        <columns>Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Channel_Category_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Channel_Category__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Channel_Category__c</errorDisplayField>
        <errorMessage>Channel Category is a required field</errorMessage>
    </validationRules>
</CustomObject>